# PPLaserRemoteServer

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  LaserRemoteServer.iss  PPLaserRemoteServer.sln  README.md  certs.ps1  install.iss  ppremote.cer
PPLaserRemoteServer/: BluetoothServer.cpp  BluetoothServer.h  GUI.cpp  GUI.h  Laser Remote Server.rc  Logger.cpp  Logger.h  PPLaserRemoteServer.vcxproj  PPLaserRemoteServer.vcxproj.filters  Source.cpp  TCPServer.cpp  TCPServer.h  UDPServer.cpp  UDPServer.h  resource.h
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/resources/: ppremote.aps  ppremote.rc  resource.h
src/app/src/: audiovolume.cpp  audiovolume.hpp  bluetoothserver.cpp  bluetoothserver.hpp  gui.cpp  gui.hpp  hibernatehandler.hpp  logger.cpp  logger.hpp  main.cpp  resource.h  tcpserver.cpp  tcpserver.hpp
src/resources/: ppremote.aps
src/savefileversion/: CMakeLists.txt  savefileinfo.cpp
src/src/: bluetoothserver.cpp  bluetoothserver.hpp  gui.cpp  gui.hpp  main.cpp  resource.h  tcpserver.cpp  tcpserver.hpp
src/updatedownloader/: CMakeLists.txt
src/updatedownloader/include/: fileinfo.h  updatedownloader.hpp
src/updatedownloader/src/: updatedownloader.cpp
src/xmlconfig/: CMakeLists.txt
src/xmlconfig/include/: xmlconfig.hpp
src/xmlconfig/src/: pugixml.cpp  xmlconfig.cpp  xmlconfigfile.cpp
